revert TruffleFile changes